Add pre backup script to default.yaml

--- a/image/environment/default.yaml
+++ b/image/environment/default.yaml
@@ -12,3 +12,6 @@ BACKUP_TTL: 15
 BACKUP_FILE_OWNER_ID: 0
 BACKUP_FILE_GROUP_ID: 0
 BACKUP_FILE_PERMISSIONS: 600
+
+# Pre backup script
+BACKUP_PRE_SCRIPT: ""
